# definitive-list

./: .dockerignore  Dockerfile  Migration.Dockerfile  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/config/: init_db.py
app/controllers/: list_controller.py  lists_schema.py
app/models/: __init__.py  list_model.py  list_sql.py
migrations/: env.py
migrations/versions/: 2023_08_08_0136-5f7db58effe4_create_lists_table.py
