[tool.poetry]
package-mode = false
name = "definitive-list"
version = "0.1.0"
description = ""
authors = ["joaoFTH7 <joao.561@live.com>"]
packages = [{include = "definitive_list"}]

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
ipdb = "^0.13.13"
alembic = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
